# nass_election

./: PROGRESS.md  main.py  pyproject.toml  requirements.txt
admin_dashboard/: forms.py  urls.py  views.py
config/: settings.py  urls.py
elections/: admin.py  forms.py  models.py  urls.py  views.py
elections/management/commands/: create_mock_data.py
results/: urls.py  views.py
static/css/: colors.css  styles.css
templates/: base.html
templates/admin_dashboard/: candidate_confirm_delete.html  candidate_form.html  candidate_management.html  dashboard.html  department_confirm_delete.html  department_form.html  department_list.html  login.html  position_confirm_delete.html  position_form.html  position_list.html  student_confirm_delete.html  student_detail.html  student_management.html
templates/elections/: candidate_form.html  candidate_list.html  voter_login.html  voting_form.html
templates/results/: results_page.html
templates/voters/: landing_page.html  register_student.html  student_details.html  upload_csv.html  verify_student.html
voters/: admin.py  forms.py  models.py  urls.py  views.py
