[project]
name = "nass-election"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django",
    "pillow",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "psycopg2-binary>=2.9.11",
    "dj-database-url>=3.1.0",
    "python-decouple>=3.8",
    "gunicorn>=25.0.3",
    "whitenoise>=6.11.0",
    "psycopg[binary,pool]>=3.3.2",
]
